syntax = "proto3";

import "bk-bscp/internal/protocol/common/common.proto";

package gsecontroller;

service GSEController {
    rpc PublishRelease(PublishReleaseReq) returns (PublishReleaseResp) {}
    rpc RollbackRelease(RollbackReleaseReq) returns (RollbackReleaseResp) {}
    rpc PullRelease(PullReleaseReq) returns (PullReleaseResp) {}
    rpc Reload(ReloadReq) returns (ReloadResp) {}
    rpc Healthz(HealthzReq) returns (HealthzResp) {}
}

message PublishReleaseReq {
    string seq        = 1;
    string biz_id     = 2;
    string release_id = 3;
    string operator   = 4;
    double nice       = 5;
}

message PublishReleaseResp {
    string         seq     = 1;
    common.ErrCode code    = 2;
    string         message = 3;
}

message RollbackReleaseReq {
    string seq        = 1;
    string biz_id     = 2;
    string release_id = 3;
    string operator   = 4;
    double nice       = 5;
}

message RollbackReleaseResp {
    string         seq     = 1;
    common.ErrCode code    = 2;
    string         message = 3;
}

message PullReleaseReq {
    string seq              = 1;
    string biz_id           = 2;
    string app_id           = 3;
    string cloud_id         = 4;
    string ip               = 5;
    string path             = 6;
    string labels           = 7;
    string cfg_id           = 8;
    string local_release_id = 9;
    string release_id       = 10;
}

message PullReleaseResp {
    string         seq     = 1;
    common.ErrCode code    = 2;
    string         message = 3;
    common.Release release = 4;
}

message ReloadReq {
    string            seq              = 1;
    string            biz_id           = 2;
    string            release_id       = 3;
    string            multi_release_id = 4;
    string            operator         = 5;
    common.ReloadSpec reload_spec      = 6;
    double            nice             = 7;
}

message ReloadResp {
    string         seq     = 1;
    common.ErrCode code    = 2;
    string         message = 3;
}

message HealthzReq {
    string seq = 1;
}

message HealthzResp {
    string                   seq     = 1;
    common.ErrCode           code    = 2;
    string                   message = 3;
    common.ModuleHealthzInfo data    = 4;
}
